--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha *_test.js"
+    "test": "mocha *_test.js",
+    "build": "rollup -c"
   },
   "author": "Daniel Balabanov <welxeorwel@gmail.com>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "express": "^4.18.2",
-    "svelte": "^3.52.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
-    "mocha": "^10.1.0"
+    "mocha": "^10.1.0",
+    "rollup": "^1.10.1",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.3",
+    "rollup-plugin-svelte": "^6.1.1",
+    "rollup-plugin-terser": "^4.0.4",
+    "svelte": "^3.18.1"
   }
 }
