--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Daniel Balabanov <welxeorwel@gmail.com>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "knex": "^2.3.0",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
